fix(android): correct lint issues for various API mis-use
Highlights:

- enforce CallSuper so TaskExecutors will always clean up correctly
- enforce Locale translation in string manipulaton (Fixes #3917)